--- a/lang/strings_english.txt
+++ b/lang/strings_english.txt
@@ -358,6 +358,8 @@ $s_username = 'Username';
 $s_username_label = 'Username';
 $s_realname = 'Real Name';
 $s_realname_label = 'Real Name';
+$s_department = 'Department';
+$s_department_label = 'Department';
 $s_email = 'E-mail';
 $s_email_label = 'E-mail';
 $s_password = 'Password';
